--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,32 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# mac system files
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+# intellij / ide files
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+
+# java / maven
+target/
+*.class
+.mvn/
+mvnw
+mvnw.cmd
+
+# node / frontend
+node_modules/
+dist/
+build/
+npm-debug.log
+yarn-error.log
+.env
+.env.local
