--- a/movix-backend/src/main/resources/application.properties
+++ b/movix-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=movix
 server.port=8081
 
-spring.datasource.url=jdbc:postgresql://aws-1-ap-northeast-1.pooler.supabase.com:6543/postgres
+spring.datasource.url=jdbc:postgresql://aws-1-ap-northeast-1.pooler.supabase.com:6543/postgres?prepareThreshold=0
 spring.datasource.username=postgres.exoarylnsgsqdfjrsvdo
 spring.datasource.password=iDqtimVAfTZfcdrB
 spring.datasource.driver-class-name=org.postgresql.Driver
